--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script src="https://kit.fontawesome.com/b5d7895b1e.js"></script>
     
-    <title>React App</title>
+    <title>Github Finder</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
